# claude-code-event-notifier

./: .env.discord.example  .env.example  .gitignore  2025-01-07-14-51-00-discord-mention-test-plan.md  2025-01-07-16-04-30-type-fixes-configure-hooks.md  2025-01-07-16-05-00-type-safety-improvements.md  2025-01-07-16-07-00-generic-types-analysis.md  2025-01-07-17-00-00-covariance-contravariance-analysis.md  2025-01-07-17-14-00-comprehensive-generic-types-synthesis.md  2025-01-07-17-36-00-json-type-checking-analysis.md  2025-01-09-19-33-00-UP046-fixes-summary.md  2025-01-11-06-00-00-astolfo-logger-evaluation.md  2025-01-11-06-36-00-astolfo-vibe-logger-implementation.md  2025-01-16-13-35-48-realtime-dashboard-tech-stack-selection-report.md  2025-01-16-17-14-32-data-processing-system-design.md  2025-01-16-18-43-56-ui-ux-design-specification.md  2025-01-16-18-51-58-infrastructure-deployment-specification.md  2025-01-16-20-30-00-phase1-backend-implementation-guide.md  2025-01-16-20-45-00-phase2-frontend-implementation-guide.md  2025-01-16-21-00-00-phase3-integration-optimization-guide.md  2025-07-12-19-13-00-analysis-astolfo-logger-issues-detection.md  2025-07-12-19-13-00-astolfo-embed-content-analysis-findings.md  2025-07-12-19-13-00-implementer-configure-hooks-astolfo-logger-integration.md  2025-07-12-21-00-00-investigator-prompt-mixing-evidence-analysis.md  2025-07-12-21-30-00-investigator-prompt-mixing-root-cause-analysis.md  2025-07-12-21-45-00-phase1-completion-report.md  2025-07-12-21-45-00-prompt-mixing-fix-implementation-report.md  2025-07-12-21-55-00-discord-receiver-complete-implementation-report.md  2025-07-12-22-25-00-project-improvement-and-process-enhancement-report.md  2025-07-12-22-30-00-comprehensive-quality-assurance-system-design.md  2025-07-12-23-00-00-phase1-completion-report.md  2025-07-13-07-30-00-comprehensive-quality-assurance-operation-manual.md  2025-07-13-07-45-00-feature-specific-quality-standards.md  2025-07-13-08-00-00-comprehensive-qa-troubleshooting-guide.md  2025-07-13-08-15-00-quality-metrics-definition-document.md  2025-07-15-21-38-00-subagent-tracking-investigation-report.md  2025-07-15-21-47-00-design-subagent-enhancement-specification.md  2025-07-15-22-01-15-test-verification-report.md  2025-07-15-22-10-00-prompt-bug-investigation.md  2025-07-16-01-35-36-infrastructure-setup-completion-report.md  (+98 more)
.claude/commands/: Fixing-Duplicate-Thread-Creation_.md  ai.md
.github/workflows/: claude-auto-review.yml  claude-pr-path-specific.yml  claude-review-from-author.yml  claude.yml
config/: .env.discord.example
docs/: 2025-01-11-07-44-00-refactoring-failure-analysis.md  2025-01-11-07-56-00-phase3-completion-report.md  2025-01-11-08-01-00-phase4-extraction-plan.md  2025-01-11-08-10-00-phase3-5-cleanup-report.md  2025-01-11-08-15-00-discord-notifier-duplication-analysis.md  2025-01-11-08-18-00-discord-notifier-dependency-analysis.md  2025-01-11-08-25-00-phase4-progress-report.md  2025-01-11-09-00-00-firefighter-successful-refactoring.md  2025-01-11-09-02-00-phase4-thread-manager-success.md  2025-01-11-09-18-00-50percent-milestone.md  2025-01-11-09-30-00-formatter-duplication-analysis.md  2025-01-11-09-36-00-phase5-64percent-achievement.md  2025-01-11-09-45-00-phase2-refactoring-plan.md  2025-01-11-10-00-00-phase2-successful-completion.md  2025-01-11-12-30-00-phase3-risk-assessment.md  2025-01-11-12-35-00-mission-complete-report.md  2025-01-11-13-00-00-module-split-strategy.md  2025-01-11-13-15-00-split-execution-plan.md  2025-01-11-13-30-00-kent-beck-tdd-strategy.md  2025-01-11-15-15-00-phase1-progress-report.md  2025-01-11-15-45-00-phase1-completion-report.md  2025-01-11-16-15-00-phase2-completion-report.md  2025-07-10-19-05-43-claude-code-hooks-reference.md  2025-07-10-20-00-52-session-knowledge-and-plan.md  2025-07-10-22-18-00-session-logger-redesign-consultation.md  2025-07-11-00-37-00-logging-policy-for-swarm-astolfo.md  2025-07-11-02-03-00-logging-implementation-progress.md  2025-07-11-02-37-00-httpclient-duplication-issue.md  2025-07-11-16-45-00-refactoring-verification-report.md  2025-07-11-17-14-00-mypy-fixes-summary.md  2025-07-11-17-15-00-mypy-error-fix-plan.md  2025-07-11-17-15-00-mypy-fixes-http-client.md  2025-07-11-17-20-00-mypy-implementation-guide.md  2025-07-11-17-25-00-mypy-quick-wins.md  2025-07-11-17-45-00-mypy-fixes-summary.md  2025-07-11-18-00-00-mypy-fix-astolfo-logger.md  2025-07-11-18-20-00-astolfo-logger-type-fixes.md  2025-07-11-20-34-00-mypy-fixes-discord-notifier.md  2025-07-12-12-45-00-session-logger-type-fixes.md  2025-07-12-14-30-00-formatter-registry-mypy-fix.md  (+19 more)
docs/development-history/: 2025-01-07-14-51-00-discord-mention-stop-events.md  2025-01-07-15-57-20-typeddict-fixes-summary.md  2025-01-07-16-07-30-configure-hooks-type-annotations.md  2025-01-07-17-28-00-error-handling-type-improvements.md  (+6 more)
examples/: discord_notifier_refactor_example.py  error_handling_examples.py  generic_types_refactor_example.py  schema_validation_example.py
scripts/: __init__.py  check_hooks_status.py  debug_discord_hooks.py  demo_discord_hooks.py  discord_auth_troubleshoot.py  discord_event_logger_debug.py  setup_discord_hooks_legacy.py  update_hooks_webhook.py  update_matchers.py
src/: __init__.py  constants.py  discord_notifier.py  discord_notifier.py.backup  discord_notifier.py.backup.20250711_070756  discord_notifier.py.backup.20250711_085650  discord_sender.py  event_notifier.py  exceptions.py  hook_installer.py  main.py  message_formatter.py  settings_types.py  thread_storage.py  type_aliases.py  type_guards.py  utils_helpers.py  validators.py
src/core/: __init__.py  (+8 more)
tests/: __init__.py  create_golden_master.sh  run_tests.py  test_discord_hooks.py  test_updated_logger.py  test_webhook_simple.py  verify_behavior.sh
utils/: check_discord_access.py  cleanup_logs.py  development_checker.py  development_checker_config.py  development_checker_enhanced.py  generic_types_analysis.py  integration_tester.py  list_channel_threads.py  run_type_safety_tests.py  session_log_viewer.py  setup_cleanup_cron.sh
venv_3_13_5/: pyvenv.cfg
(+174 files in other folders)
